build: display documentation navigation

--- a/content/docs/1. getting-started/3. blah.md
+++ b/content/docs/1. getting-started/3. blah.md
@@ -1,8 +1,8 @@
 ---
-title: Getting Started Index
+title: Getting Started Blah
 ---
 
-# Getting Started
+# Getting Started Blah
 
 Dolor officia exercitation officia ullamco labore dolore reprehenderit aliquip veniam exercitation cupidatat velit laboris exercitation. Ad et esse velit ea nostrud aute eiusmod do ad amet cupidatat. Duis adipisicing fugiat est et quis. Deserunt duis duis ullamco adipisicing dolore ex ex consequat voluptate. Magna aliqua tempor officia velit reprehenderit fugiat deserunt consequat ad.
 
@@ -15,18 +15,3 @@ Consequat consectetur adipisicing labore est amet ut. Amet cillum ex ea sunt min
 Lorem laborum eu irure aliquip do eiusmod duis nulla ad anim id. Ipsum aute fugiat id veniam ad commodo aliquip labore ea eu nisi. Tempor fugiat non esse qui tempor sit enim.
 
 Minim esse sunt id labore labore consectetur velit laboris et. Dolore deserunt et ullamco nulla Lorem elit consectetur do aute nostrud labore. Dolore laborum commodo nulla dolore minim eu velit aliqua dolore eu non voluptate. Duis sint non proident laboris ipsum ex ex excepteur ipsum laboris.
-
-::code-group
-
-```markdown [Source]
-::alert{type="success"}
-Hooray!
-::
-```
-
-::code-block{label="Preview"}
-::alert{type="success"}
-Hooray!
-::
-::
-::
