fix: solve header rendered with wrapping link

--- a/content/docs/1. getting-started/1. introduction.md
+++ b/content/docs/1. getting-started/1. introduction.md
@@ -4,19 +4,37 @@ title: Introduction
 
 # Getting Started
 
-Dolor officia exercitation officia ullamco labore dolore reprehenderit aliquip veniam exercitation cupidatat velit laboris exercitation. Ad et esse velit ea nostrud aute eiusmod do ad amet cupidatat. Duis adipisicing fugiat est et quis. Deserunt duis duis ullamco adipisicing dolore ex ex consequat voluptate. Magna aliqua tempor officia velit reprehenderit fugiat deserunt consequat ad.
+## h2
 
-::code-group
+### h3
 
-```markdown [Source]
-::alert{type="success"}
-Hooray!
-::
+#### h4
+
+##### h5
+
+###### h6
+
+Dolor officia exercitation officia `const codeInline: string = 'highlighted code inline'`{lang="ts"}
+ullamco labore dolore reprehenderit aliquip veniam exercitation cupidatat velit laboris exercitation. Ad et esse velit ea nostrud aute eiusmod do ad amet cupidatat. Duis adipisicing fugiat est et quis. Deserunt duis duis ullamco adipisicing dolore ex ex consequat voluptate. Magna aliqua tempor officia velit reprehenderit fugiat deserunt consequat ad.
+
+```bash [Yarn]
+yarn add docus
 ```
 
-::code-block{label="Preview"}
-::alert{type="success"}
-Hooray!
-::
-::
-::
+```bash [NPM]
+npm install docus
+```
+
+> Bloc
+
+| Key | Type      | Description |
+| --- | --------- | ----------- |
+| 1   | Wonderful | Table       |
+| 2   | Wonderful | Data        |
+| 3   | Wonderful | Website     |
+
+```javascript[file.js]{4-6,7} meta-info=val
+export default () => {
+  console.log('Code block')
+}
+```
