feat(doc): display dynamically doc article header

--- a/content/docs/2. getting-started/2. developer.md
+++ b/content/docs/2. getting-started/2. developer.md
@@ -2,9 +2,11 @@
 title: Prerequisites
 ---
 
-# Getting Started
-
 Dolor officia exercitation officia ullamco labore dolore reprehenderit aliquip veniam exercitation cupidatat velit laboris exercitation. Ad et esse velit ea nostrud aute eiusmod do ad amet cupidatat. Duis adipisicing fugiat est et quis. Deserunt duis duis ullamco adipisicing dolore ex ex consequat voluptate. Magna aliqua tempor officia velit reprehenderit fugiat deserunt consequat ad.
+
+<!--more-->
+
+## Sunt officia voluptate deserunt eiusmod.
 
 Qui veniam aliqua duis do quis consectetur fugiat anim. Laborum enim proident pariatur ex laborum veniam pariatur. Sint elit sint duis Lorem ex laboris consequat adipisicing nulla et velit elit.
 
