feat(code): style code blocks in docs

--- a/content/docs/2. getting-started/2. developer.md
+++ b/content/docs/2. getting-started/2. developer.md
@@ -2,18 +2,62 @@
 title: Prerequisites
 ---
 
-Dolor officia exercitation officia ullamco labore dolore reprehenderit aliquip veniam exercitation cupidatat velit laboris exercitation. Ad et esse velit ea nostrud aute eiusmod do ad amet cupidatat. Duis adipisicing fugiat est et quis. Deserunt duis duis ullamco adipisicing dolore ex ex consequat voluptate. Magna aliqua tempor officia velit reprehenderit fugiat deserunt consequat ad.
+# Custom Code Blocks
 
-<!--more-->
+## JS Code Block
 
-## Sunt officia voluptate deserunt eiusmod.
+```js
+const a = 5
+```
 
-Qui veniam aliqua duis do quis consectetur fugiat anim. Laborum enim proident pariatur ex laborum veniam pariatur. Sint elit sint duis Lorem ex laboris consequat adipisicing nulla et velit elit.
+## Vue Code Block
 
-Duis fugiat eu ea est excepteur fugiat ullamco pariatur sit consequat elit deserunt. Ullamco dolore proident exercitation deserunt deserunt tempor excepteur laborum ipsum. Dolore Lorem ipsum officia ullamco non deserunt qui ex cupidatat sint sunt non. Do ullamco sit anim cillum culpa non occaecat consequat veniam sunt exercitation. Labore laborum aliquip aute cillum nisi eu officia velit. Sunt anim pariatur consectetur dolore duis Lorem nisi velit nostrud.
+```vue
+<template>
+  <input v-model.lazy="message" />
+</template>
 
-Consequat consectetur adipisicing labore est amet ut. Amet cillum ex ea sunt minim occaecat id. Eiusmod veniam voluptate proident in commodo ex adipisicing amet dolore ad sunt elit. Amet voluptate in dolor nostrud enim aliquip tempor tempor anim. Id do ea do dolor et veniam.
+<script setup>
+import { watch, ref } from 'vue'
 
-Lorem laborum eu irure aliquip do eiusmod duis nulla ad anim id. Ipsum aute fugiat id veniam ad commodo aliquip labore ea eu nisi. Tempor fugiat non esse qui tempor sit enim.
+const message = ref('')
 
-Minim esse sunt id labore labore consectetur velit laboris et. Dolore deserunt et ullamco nulla Lorem elit consectetur do aute nostrud labore. Dolore laborum commodo nulla dolore minim eu velit aliqua dolore eu non voluptate. Duis sint non proident laboris ipsum ex ex excepteur ipsum laboris.
+const saveMessage = () => {
+  // do anything with the message
+}
+
+watch(message, (newMessage) => {
+  saveMessage(newMessage) // only called on change events
+})
+</script>
+```
+
+## Vue Code Block With Line Highlighting
+
+```vue {2,6-10}
+<template>
+  <input v-model.lazy="message" />
+</template>
+
+<script setup>
+import { watch, ref } from 'vue'
+
+const message = ref('')
+
+const saveMessage = () => {
+  // do anything with the message
+}
+
+watch(message, (newMessage) => {
+  saveMessage(newMessage) // only called on change events
+})
+</script>
+```
+
+## Vue Code Block With Filename
+
+```vue [components/content/MyComponent.vue]
+<template>
+  <input v-model.lazy="message" />
+</template>
+```
