feat(docs): adjust documentation width

--- a/content/docs/2. getting-started/2. developer.md
+++ b/content/docs/2. getting-started/2. developer.md
@@ -34,24 +34,25 @@ watch(message, (newMessage) => {
 
 ## Vue Code Block With Line Highlighting
 
-```vue {2,6-10}
-<template>
-  <input v-model.lazy="message" />
-</template>
-
-<script setup>
-import { watch, ref } from 'vue'
-
-const message = ref('')
-
-const saveMessage = () => {
-  // do anything with the message
+```apex {10, 16} [classes/mkt/MarketingSuppressionService.vue]
+/**
+ * @description EmailOptOut Service responsible for orchestrating
+ * all logic related to the EmailOptOut entity
+ */
+public interface MarketingSuppressionService {
+    /**
+     * @description Checking if the zone is Asia or not
+     * @param zone Zone of the Contact
+     */
+    Boolean getHasOptedOutOfEmailByZone(String zone);
+    /**
+     * @description method that validates Contacts if Email Opt Out
+     * @param SObjectsToValidate map of Records that have been updated
+     * @return Map<Id, SObject> list of recordIds where marketing email suppression is wrongly unchecked
+     */
+    Map<Id, SObject> filterRecordsWithSuppressionErrors(Map<Id, SObject> SObjectsToValidate);
 }
 
-watch(message, (newMessage) => {
-  saveMessage(newMessage) // only called on change events
-})
-</script>
 ```
 
 ## Vue Code Block With Filename
