feat(docs): animate when code is copied

--- a/content/docs/1. before-you-start/1. introduction.md
+++ b/content/docs/1. before-you-start/1. introduction.md
@@ -1,6 +1,6 @@
 ---
 section: Before you start
-title: What is DX@Scale
+title: Introduction
 sub-title: What is DX@Scale and what you can do with it
 ---
 
@@ -8,7 +8,7 @@ sub-title: What is DX@Scale and what you can do with it
 
 ## Developer Experience with DX@Scale
 
-Before we dive into the DX@Scale practices, let's take a look at the Developer Experience with DX@Scale.
+Before we dive into DX@Scale, let's take a look at the Developer Experience with DX@Scale.
 
 ::prose-video
 ---
@@ -33,9 +33,3 @@ Which leads to:
 1. Simplification of the developer experience,
 1. Ability to achieve consistent and reliable deployments,
 1. Reduction in terms of cost/overhead in Salesforce Programs.
-
-DX@Scale extends the existing Salesforce DX ecosystem by providing:
-
-<!-- {% embed url="https://www.youtube.com/watch?v=4og4gR6s0tY" %} -->
-
-An optimized Developer Experience is paramount for us while building DX@Scale. We are constantly focusing on improving our tools ensuring these practices are easy to adopt in your organization.
