fix(ui): avoid line numbering

--- a/content/docs/1. before-you-start/1. introduction.md
+++ b/content/docs/1. before-you-start/1. introduction.md
@@ -6,6 +6,16 @@ sub-title: What is DX@Scale and what you can do with it
 
 **DX@Scale** is a collection of practices, open-source tools, frameworks, and practitioners built on our experience in delivering large and complex Salesforce programs. Utilising our **'curated'** practices, you can build a modular Salesforce Org that is reliable and easy to maintain.
 
+## What is DX@Scale?
+
+Salesforce started as a Customer Relationship Management (CRM) platform and evolved to become an enterprise-grade digital platform. Initially, Salesforce emphasised creating applications through clicks rather than code, but due to the increasing complexity and scale of applications, Salesforce introduced Salesforce DX in 2018.
+
+Salesforce DX closed the gap with other custom technologies and provided modern development tools and practices like the command line interface, version control, and temporary development environments known as "Scratch Orgs".
+
+The goal of Salesforce DX is to improve the developer experience, make deployments more reliable, and reduce costs.
+
+DX@Scale is an extension of Salesforce DX that provides simplified developer experience, continuous integration and deployment (CI/CD) orchestration, end-to-end observability, and a body of knowledge for modular development.
+
 ## Developer Experience with DX@Scale
 
 Before we dive into DX@Scale, let's take a look at the Developer Experience with DX@Scale.
@@ -15,21 +25,3 @@ Before we dive into DX@Scale, let's take a look at the Developer Experience with
 video-id: 4og4gR6s0tY
 aspect-ratio: 16:9
 ---
-
-## Why DX@Scale?
-
-Salesforce was a platform designed with the "clicks not code" philosophy, since then, it has evolved from a CRM platform into an Enterprise Platform. Many companies now consider Salesforce a critical system, and the number of applications it supports is consistently increasing, alongside the level of customisation and complexity.
-
-Salesforce projects have always suffered from unreliable deployments, costly governance and poor developer experience due to the lack of the proper tooling and practices.
-
-The introduction of Salesforce DX is revolutionising the ways of working with Salesforce. DX@Scale extends the existing Salesforce DX ecosystem by providing:
-
-1. CI/CD orchestration capabilities
-1. End-to-End observability
-1. Body of knowledge for Modular Development
-
-Which leads to:
-
-1. Simplification of the developer experience,
-1. Ability to achieve consistent and reliable deployments,
-1. Reduction in terms of cost/overhead in Salesforce Programs.
