doc: correct sfpowerscript description

--- a/content/docs/30.getting-started/1.introduction.md
+++ b/content/docs/30.getting-started/1.introduction.md
@@ -37,7 +37,7 @@ $ sfdx --version
 
 ### sfpowerscripts
 
-sfpowerscripts is a collection of scripts that help you automate your Salesforce development lifecycle. It is a set of scripts that are built on top of the Salesforce CLI and provide a set of commands that can be used to automate your Salesforce development lifecycle.
+sfpowerscripts is an end-to-end build and deployment orchestrator for modular development on Salesforce that can be implemented in any CI/CD platform of choice.
 
 To install sfpowerscripts, run the following command:
 
