doc: add visual studio code setup

--- a/content/docs/30.getting-started/1.introduction.md
+++ b/content/docs/30.getting-started/1.introduction.md
@@ -73,3 +73,12 @@ $ sfdx plugins:install sfpowerkit
 ```shell [Terminal]
 $ sfdx plugins:install sfdx-browserforce-plugin
 ```
+
+### Visual Studio Code
+
+If you are using Visual Studio Code, we recommend you install the Salesforce extensions for Visual Studio Code. This will provide you with syntax highlighting, code completion, and other useful features.
+
+You have two options for installing the Salesforce extensions for Visual Studio Code:
+
+- [Salesforce Extension Pack](https://marketplace.visualstudio.com/items?itemName=salesforce.salesforcedx-vscode)
+- [Salesforce Extension Pack (Expanded)](https://marketplace.visualstudio.com/items?itemName=salesforce.salesforcedx-vscode-expanded) which offers additional features
