doc: finalise mdapi section

--- a/content/docs/30.getting-started/1.introduction.md
+++ b/content/docs/30.getting-started/1.introduction.md
@@ -1,84 +1,11 @@
 ---
 section: Getting Started
-title: Setting up your environment
-sub-title: Making sure you have everything you need to get started
+title: Introduction
+sub-title: Learn how to use DX@Scale to build a modular Salesforce Org
 ---
 
-## Prerequisites
+The following challenges will enable you to learn Salesforce DX and understand how DX@Scale practices will help you in your modular development journey.
 
-Before you start, make sure you have the following:
+This section requires that you are comfortable with command-line interfaces, and the terminal and have a basic understanding of Salesforce.
 
-### Git
-
-Git is a version control system that allows you to track changes to your code. It also allows you to collaborate with other developers on the same codebase. It is also the most widely used modern version control system.
-
-To install git depending on your operating system, follow the instructions on Github to [install git](https://github.com/git-guides/install-git)
-
-Once you have installed git, you can verify your installation by running the following command:
-
-```shell [Terminal]
-$ git --version
-> git version 2.39.1
-```
-
-### Salesforce CLI
-
-The Salesforce CLI is a command-line interface that allows you to interact with Salesforce. It is the primary tool for interacting with Salesforce DX.
-
-Install the Salesforce CLI by following the instructions in the [Salesforce CLI Installation Guide](https://developer.salesforce.com/tools/sfdxcli).
-
-Once you have installed the Salesforce CLI you can verify your installation by running the following command:
-
-```shell [Terminal]
-$ sfdx --version
-> sfdx-cli/7.187.1 darwin-x64 node-v18.13.0
-```
-
-
-### sfpowerscripts
-
-sfpowerscripts is an end-to-end build and deployment orchestrator for modular development on Salesforce that can be implemented in any CI/CD platform of choice.
-
-To install sfpowerscripts, run the following command:
-
-```shell [Terminal]
-$ sfdx plugins:install @dxatscale/sfpowerscripts
-```
-
-Once you have installed sfpowerscripts, you can verify your installation by running the following command:
-
-```shell [Terminal]
-$ sfdx plugins
-> @dxatscale/sfpowerscripts 20.20.30
-```
-
-### Other tools
-
-You will also need the following plugins for the Salesforce CLI:
-
-#### sfdmu: Salesforce Data Migration Utility
-
-```shell [Terminal]
-$ sfdx plugins:install sfdmu
-```
-
-#### sfpowerkit
-
-```shell [Terminal]
-$ sfdx plugins:install sfpowerkit
-```
-
-#### sfdx-browserforce-plugin
-
-```shell [Terminal]
-$ sfdx plugins:install sfdx-browserforce-plugin
-```
-
-### Visual Studio Code
-
-If you are using Visual Studio Code, we recommend you install the Salesforce extensions for Visual Studio Code. This will provide you with syntax highlighting, code completion, and other useful features.
-
-You have two options for installing the Salesforce extensions for Visual Studio Code:
-
-- [Salesforce Extension Pack](https://marketplace.visualstudio.com/items?itemName=salesforce.salesforcedx-vscode)
-- [Salesforce Extension Pack (Expanded)](https://marketplace.visualstudio.com/items?itemName=salesforce.salesforcedx-vscode-expanded) which offers additional features
+It also requires that you have a Salesforce Org to work with. If you don't have one, you can create a free Developer Org on [https://developer.salesforce.com/signup](https://developer.salesforce.com/signup) or use a Trailhead Playground.
